# fly-in

./: .gitignore  Makefile  README.md  code_review_analysis.md  context.md  informe_revision.md  main.py  pyproject.toml  simulation_results.md  test_results.md
domain/entities/: __init__.py  drone.py  hub.py  zones.py
domain/services/: __init__.py  drone_factory.py  routing.py  simulation.py
infrastructure/parsers/: __init__.py  map_parser.py
maps/: 01_the_impossible_dream.txt  map.txt
maps/easy/: 02_simple_fork.txt
maps/medium/: 02_circular_loop.txt
src/: Colors.py  __init__.py
utils/: __init__.py  colors.py
