[project]
name = "fly-in"
version = "1.0"
description = "A drone routing system designed to navigate multiple drones through connected hubs while minimizing turns and avoiding collisions."
authors = [
    {name = "Noel Caravaca"}
]
license = {text = "MIT"}
requires-python = "^3.10"
dependencies = [
    "colored (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "rich (>=14.3.2,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
