[tool.poetry]
name = "fly-in"
version = "1.0"
description = "A drone routing system"
authors = ["Noel Caravaca"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
colored = "^2.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
